add cordova for web

--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -33,6 +33,7 @@
 	<script type="text/javascript" src="js/framework7.js"></script>
 	<script type="text/javascript" src="js/thirdparty.js"></script>
 	<script type="text/javascript" src="js/react.js"></script>
+    <script type="text/javascript" src="js/cordova.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
