--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -29,7 +29,9 @@
 
 </head>
 <body>
-	<div id="app"></div>
+    <div id="iphone_device">
+        <div id="iphone_screen"></div>
+    </div>
 	<script type="text/javascript" src="js/framework7.js"></script>
 	<script type="text/javascript" src="js/thirdparty.js"></script>
 	<script type="text/javascript" src="js/react.js"></script>
