--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TouchstoneJS (Demo)</title>
+	<title>Remobile</title>
 	<meta charset="utf-8" />
 	<meta name="format-detection" content="telephone=no" />
 	<meta name="msapplication-tap-highlight" content="no" />
