--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -29,9 +29,12 @@
 
 </head>
 <body>
-    <div id="iphone_device">
-        <div id="iphone_screen"></div>
-    </div>
+    <div id="app">
+    <!--div id="iphone_device">
+        <div id="iphone_screen">
+            </div>
+        </div>
+    </div-->
 	<script type="text/javascript" src="js/framework7.js"></script>
 	<script type="text/javascript" src="js/thirdparty.js"></script>
 	<script type="text/javascript" src="js/react.js"></script>
