fix web phone container

--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -29,12 +29,7 @@
 
 </head>
 <body>
-    <div id="app">
-    <!--div id="iphone_device">
-        <div id="iphone_screen">
-            </div>
-        </div>
-    </div-->
+    <div id="app"></div>
 	<script type="text/javascript" src="js/framework7.js"></script>
 	<script type="text/javascript" src="js/thirdparty.js"></script>
 	<script type="text/javascript" src="js/react.js"></script>
