--- a/kitchen-sink/platforms/web/phone/index.html
+++ b/kitchen-sink/platforms/web/phone/index.html
@@ -54,10 +54,10 @@
 
 	    el = document.getElementById('splash');
 	    css(el, rect);
-	    css(el, {"background-image": "url('img/splash.png')", "background-size": "100% 100%"});
+	    css(el, {"background-image": "url('img/splash.jpg')", "background-size": "100% 100%"});
 	    setTimeout(function() {
 	    	 el.remove();
-	    }, 2000);
+	    }, 3000);
 	</script>
 </body>
 </html>
