add material less ui

--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -13,7 +13,7 @@
 	<meta name="mobile-web-app-capable" content="yes" />
 
 	<!-- styles -->
-	<link rel="stylesheet" type="text/css" href="css/ios.css" />
+	<link rel="stylesheet" type="text/css" href="css/material.css" />
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
 
 </head>
