--- a/chat/server/server/www/index.html
+++ b/chat/server/server/www/index.html
@@ -20,7 +20,7 @@
 
 	<!-- ios other -->
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-	<meta name="apple-mobile-web-app-title" content="TouchstoneJS (Demo)" />
+	<meta name="apple-mobile-web-app-title" content="remobile (kitchen-sink)" />
 
 	<!-- styles -->
 	<link rel="stylesheet" type="text/css" href="css/app.css" />
