--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app" class="views"></div>
 	<script type="text/javascript" src="js/framework7.js"></script>
 	<script type="text/javascript" src="js/react.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
