--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
 </head>
 <body>
-    <div id="app" class="views"></div>
+    <div id="app"></div>
 	<script type="text/javascript" src="js/framework7.js"></script>
 	<script type="text/javascript" src="js/react.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
